# rcli

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  deny.toml
assets/: juventus.json
src/: lib.rs  main.rs  opts.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/process/: csv_convert.rs  gen_pass.rs
