[package]
name = "rcli"
version = "0.1.0"
authors = ["shangyin <shangyin@163.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.33"
toml = "0.8"
zxcvbn = "3.1.0"
rand = "0.8.5"
